--- a/vue源码/observe.html
+++ b/vue源码/observe.html
@@ -10,62 +10,75 @@
 
 <body>
   <script>
-    function convert(obj, dep) {
-      Object.keys(obj).forEach(key => {
-        let innerValue = obj[key]
-        Object.defineProperty(obj, key, {
-          get() {
-            dep.depend()
-            return innerValue
-          },
-          set(newValue) {
-            innerValue = newValue
-            dep.notify()
-          }
-        })
-      })
-    }
+function isObject (obj) {
+    return typeof obj === 'object'
+      && !Array.isArray(obj)
+      && obj !== null
+      && obj !== undefined
+}
 
+function observe (obj) {
+  if (!isObject(obj)) {
+    throw new TypeError()
+  }
 
-
-    class Dep {
-      constructor() {
-        this.subscritor = new Set();
-      }
-
-      depend() {
-        if (updateWrapper) {
-          this.subscritor.add(updateWrapper);
+  Object.keys(obj).forEach(key => {
+    let internalValue = obj[key]
+    let dep = new Dep()
+    Object.defineProperty(obj, key, {
+      get () {
+        dep.depend()
+        return internalValue
+      },
+      set (newValue) {
+        const isChanged = internalValue !== newValue
+        if (isChanged) {
+          internalValue = newValue
+          dep.notify()
         }
       }
-
-      notify() {
-        this.subscritor.forEach(sub => sub());
-      }
-    }
-
-    let updateWrapper
-    function autorun(fn) {
-      updateWrapper = fn
-      fn()
-      updateWrapper = null;
-    }
-
-    function observe(obj) {
-      let dep = new Dep();
-      convert(obj, dep);
-    }
-
-    const state = {
-      count: 0
-    }
-    observe(state)
-    autorun(() => {
-      console.log(state.count);
     })
+  })
+}
 
-    state.count++;
+window.Dep = class Dep {
+  constructor () {
+    this.subscribers = new Set()
+  }
 
+  depend () {
+    if (activeUpdate) {
+      // register the current active update as a subscriber
+      this.subscribers.add(activeUpdate)
+    }
+  }
+
+  notify () {
+    // run all subscriber functions
+    this.subscribers.forEach(subscriber => subscriber())
+  }
+}
+
+let activeUpdate
+
+function autorun (update) {
+  function wrappedUpdate () {
+    activeUpdate = wrappedUpdate
+    update()
+    activeUpdate = null
+  }
+  wrappedUpdate()
+}
+
+const state = {
+  count: 0
+}
+observe(state)
+autorun(() => {
+  console.log(state.count);
+})
+
+state.count++;
     
   </script>
 </body>
